# rust-swift-bridge

./: .gitignore  README.md
rust/: Cargo.toml
rust/src/: hello.h  lib.rs
swift/Hello/Hello/: ContentView.swift  HelloApp.swift  RustHello.swift  hello-bridge-header.h
swift/Hello/Hello.xcodeproj/: project.pbxproj
swift/Hello/HelloTests/: HelloTests.swift
swift/Hello/HelloUITests/: HelloUITests.swift
