[package]
name = "hello"
version = "0.1.0"
authors = ["Chris Ohk <utilForever@gmail.com>"]
edition = "2018"
description = "Example code for building and deploying a Rust library on iOS"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello"
crate-type = ["staticlib", "cdylib"]

[dependencies]
